--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -25,6 +25,10 @@ $primary-dark: $dark-purple ;
 $header-background: $white;
 $header-text: $black;
 
+// intro
+$intro-background: $dark-moss-green;
+$intro-text: $white;
+
 // strip
 $strip-background: $tea-green;
 $strip-text: $black;
@@ -38,6 +42,11 @@ $feature-background: $walnut-brown;
 $feature-text: $white;
 $feature-content-text: darken($white, 5%);
 
+// Footer
+$footer-background-color: $primary;
+$footer-text-color: $white;
+$sub-footer-background-color: darken($primary, 10%);
+$sub-footer-text-color: $white;
 
 //$secondary: #f88379;
 $secondary: #6962AD;
@@ -56,11 +65,6 @@ $link-hover-decoration: underline;
 $font-family-base: Helvetica, Arial, sans-serif, -apple-system;
 $font-family-heading: "Playfair Display", serif, -apple-system;
 
-// Footer
-$footer-background-color: $primary;
-$footer-text-color: $white;
-$sub-footer-background-color: darken($primary, 10%);
-$sub-footer-text-color: $white;
 
 // Bootstrap 5.3.2
 
